--- a/webbasics/styles.css
+++ b/webbasics/styles.css
@@ -15,7 +15,7 @@
 .img {position: relative; float: center; top:20px; bottom:10px; border-bottom: 50px solid azure;
     width:200px; height:300px; padding-left: 10px; content:"width:device, initial-scale:1.0"}
 
-.biopic {position: relative; width: 175px; height:200px;}
+.biopic {position: relative; width: 20%; height:200px;}
 
 .footer {width:30%; text-align:center; font:courier;
     background:rgb(194, 92, 194); border-bottom:2px; position:fixed; bottom:10px;}
