--- a/webbasics/styles.css
+++ b/webbasics/styles.css
@@ -1,23 +1,25 @@
-#header {width:100%; text-align:center; font-style:courier;
+#header {width:100%; text-align:center; font-family:"courier";
     border-radius:10px; background:rgb(194, 92, 194); border-bottom:5px solid azure;}
 
 .rightnav {width:20%;height:570px;padding-left:10px;padding-right:10px;text-align:left;
-    float:right;margin:15px;font-style:courier;position:absolute;right:70px}
+    float:right;margin:15px;font-family:"courier";position:absolute;right:70px;}
 
 #centerbody {margin:10px;float:center; text-align:left;
-    width:70%;height:180px;clear:both;font-style:courier;}
+    width:70%;height:180px;clear:both;font-family:"courier";}
 
 .fixedimg {float: right; position:relative; top:-185px;width:25%; height:195px;}
 
 #bottomright {margin:10px;float:center; text-align:left;
-    width:70%;height:200px;font-style:courier;}
+    width:70%;height:200px;font-family:"courier";}
 
 .img {position: relative; float: center; top:20px; bottom:10px; border-bottom: 50px solid azure;
-    width:200px; height:300px; padding-left: 10px; content:"width:device, initial-scale:1.0"}
+    width:200px; height:300px; padding-left: 10px; content:"width:device, initial-scale:1.0";}
 
 .biopic {position: relative; width: 8%; height:180px;}
 
-.footer {width:30%; text-align:center; font:courier;
+.footer {width:30%; text-align:center; font-family:"courier";
     background:rgb(194, 92, 194); border-bottom:2px; position:fixed; bottom:10px;}
 
-.backhome {position:relative; float:right;}
+.backhome {position:relative; float:right;font-family:"courier";}
+
+.font {font-family:"courier";}
