--- a/russian/russian.css
+++ b/russian/russian.css
@@ -1,10 +1,11 @@
-.body {background-color: rgb(208, 197, 164); display: flex; flex-direction:column; min-height:100vh;
+.body {background-color: rgb(79, 148, 233); display: flex; flex-direction:column; min-height:100vh;
 }
 #header {
-    background: rgb(153, 157, 191); color:rgb(29, 20, 20); 
+    background: rgb(191, 195, 226); color:rgb(29, 20, 20); 
     border-bottom:3px solid rgb(57, 54, 80);
     margin-top: 0px;
-    padding: 10px 5px
+    padding: 10px 5px;
+    text-align: center;
 }
 #footer {
     width: 100%;
@@ -16,7 +17,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    clear:left ; background:rgb(223, 187, 193);color:rgb(57, 54, 80);border-bottom:5px solid rgb(85, 59, 63);
+    clear:left ; background:rgb(111, 207, 223);color:rgb(57, 54, 80);border-bottom:5px solid rgb(85, 59, 63);
     }      
 .tabs {
     display: flex;
@@ -47,25 +48,20 @@
     color: purple;
     border-bottom: none;
   }
-p {
-    color: rgb(23, 9, 27);
-}
 .section-group {
     margin: 40px auto;
     width: 90%;
     max-width: 1200px;
   }
-  
   .three-columns {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 20px;
   }
-  
-  .column {
+  .russian-column {
     flex: 1;
-    background-color: #c7e8e0;
+    background-color: #7aaae0;
     padding: 30px;
     text-align: center;
     border-radius: 8px;
@@ -73,39 +69,16 @@ p {
     font-size: 18px;
     margin-bottom: 20px
   }
-  
-  .large-rectangle {
-    background-color: #e0f7f1;
-    padding: 40px;
+  .russian-column1 {
+    flex: 1;
+    background-color: #7aaae0;
+    padding: 30px;
+    text-align: left;
     border-radius: 8px;
     border: 2px solid #2f473b;
-    text-align: center;
-    font-size: 20px;
-  }
-  .column h3 {
-    margin-top: 0;
-    color: #2c3e50;
-    font-size: 22px;
-  }
-  
-  .column ul {
-    list-style-type: disc;
-    padding-left: 20px;
-    text-align: left;
-  }
-  
-  .column li {
     font-size: 18px;
-    line-height: 1.6;
+    margin-bottom: 20px
   }
-  .subsection {
-    margin-top: 20px;
-    background-color: #d7f2e5;
-    padding: 15px;
-    border-radius: 8px;
-    border: 1px solid #2f473b;
-  }
-  
   .grid-20 {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
@@ -113,12 +86,11 @@ p {
     margin: 40px auto;
     width: 90%;
   }
-  
   .grid-box {
     width: 100%;
     height: auto;
     min-height: 360px;
-    background-color: #e3f6ef;
+    background-color: #7aaae0;
     border: 1px solid #2f473b;
     border-radius: 6px;
     padding: 10px;
@@ -129,7 +101,7 @@ p {
     box-sizing: border-box;
   }
   .full-width-heading {
-    background-color: #c7e8e0;
+    background-color: #7aaae0;
     padding: 15px;;
     text-align: center;
     border-radius: 8px;
@@ -159,7 +131,7 @@ p {
   }
   .column1 {
     flex: 1;
-    background-color: #c7e8e0;
+    background-color: #7aaae0;
     padding: 30px;
     text-align: left;
     border-radius: 8px;
