--- a/russian/russian.css
+++ b/russian/russian.css
@@ -57,6 +57,7 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    padding: 30px;
     margin-bottom: 20px;
   }
   .russian-column {
